# TP2022_CPP_SET

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: RBTree.yml
RBTree/: CMakeLists.txt  Iterator.h  RBNode.h  RBTree.h
Set/: CMakeLists.txt  Set.cpp  Set.h
Tests/: CMakeLists.txt  Tests_Copy.h  Tests_Erase.h  Tests_Find.h  Tests_Init.h  Tests_Insert.h  Tests_Iterators.h  Tests_Lower_Bound.h  Tests_by_Aleksei.h  help_for_tests.h  tests.cpp
scripts/linters/: linters.sh
